--- a/roles/lint-sherlock/tasks/main.yml
+++ b/roles/lint-sherlock/tasks/main.yml
@@ -19,13 +19,12 @@
     dest: '{{ lint_dirs.code }}'
     accept_hostkey: yes
 
-#- name: Push the config files
-  #template:
-    #src: stacks/{{ item }}.yml.j2
-    #dest: '{{ stacks_dirs.config }}/{{ item }}.yml'
-  #with_items:
-    #- stacks
-    #- stacks.test
+- name: Push the config files
+  template:
+    src: lint/{{ item }}.yml.j2
+    dest: '{{ lint_dirs.config }}/{{ item }}.yml'
+  with_items:
+    - lint
 
 #- name: Install the package
   #command: '{{ stacks_dirs.src }}/bin/setup-sherlock'
