--- a/roles/lint-sherlock/tasks/main.yml
+++ b/roles/lint-sherlock/tasks/main.yml
@@ -36,8 +36,8 @@
     dest: /home/{{ ansible_ssh_user }}/.bashrc
     line: export LINT_CONFIG={{ lint_dirs.config }}
 
-- name: Push sbatch configs
+- name: Push MPI sbatch configs
   template:
-    src: sbatch.j2
+    src: sbatch-mpi.j2
     dest: '{{ lint_dirs.sbatch }}/{{ item.name }}.sbatch'
-  with_items: '{{ lint_sbatch }}'
+  with_items: '{{ lint_sbatch_mpi }}'
