--- a/roles/lint-sherlock/defaults/main.yml
+++ b/roles/lint-sherlock/defaults/main.yml
@@ -43,3 +43,9 @@ lint_sbatch:
     nodes: 1
     tasks: 1
     mem: 4000
+
+  - name: gather-gail
+    time: 02:00:00
+    nodes: 1
+    tasks: 1
+    mem: 4000
