--- a/roles/lint-sherlock/defaults/main.yml
+++ b/roles/lint-sherlock/defaults/main.yml
@@ -15,6 +15,8 @@ stacks_raw: /scratch/PI/malgeehe/data/stacks/raw
 
 # ****
 
+# TODO: Simplify?
+
 lint_chars: '{{ lint_dirs.data }}/results/chars'
 lint_tokens: '{{ lint_dirs.data }}/results/tokens'
 
