Reset for Spark.

--- a/sherlock-deploy.yml
+++ b/sherlock-deploy.yml
@@ -1,12 +1,6 @@
 ---
 
 - name: Deploy to Sherlock
-
-  vars_files:
-    - vars/local.yml
-
-  hosts:
-    - sherlock
-
+  hosts: sherlock
   roles:
-    - role: lint-sherlock
+    - role: lint
