--- a/roles/spark/defaults/main.yml
+++ b/roles/spark/defaults/main.yml
@@ -1,27 +1,8 @@
 ---
 
 spark_release: spark-2.1.0-bin-hadoop2.7
-spark_dir: ~/spark
+
+spark_dir: /share/PI/malgeehe/spark
 spark_home: '{{ spark_dir }}/spark'
 
-spark_master_host: localhost
-spark_master_port: 7077
-spark_master_url: spark://{{ spark_master_host }}:{{ spark_master_port }}
-
-# On EC2, use public DNS.
-spark_public_dns: >
-  `wget -q -O - http://169.254.169.254/latest/meta-data/public-hostname ||
-   wget -q -O - http://169.254.169.254/latest/meta-data/local-ipv4`
-
-spark_slave_count: 1
-spark_slave_vcpus: 1
-spark_tasks_per_core: 3
-
-spark_default_parallelism: '{{
-  spark_slave_count|int *
-  spark_slave_vcpus|int *
-  spark_tasks_per_core
-}}'
-
-spark_packages:
-  - com.amazonaws:aws-java-sdk:1.7.4
+lint_jar_path: /share/PI/malgeehe/code/lint.jar
