Add Spark to path.

--- a/roles/spark/tasks/main.yml
+++ b/roles/spark/tasks/main.yml
@@ -28,6 +28,12 @@
     dest: '{{ spark_home }}'
     state: link
 
+- name: Add Spark to path
+  lineinfile:
+    dest: ~/.bashrc
+    line: export PATH=$PATH:{{ spark_home }}/bin
+
+# TODO: Separate role.
 - name: Copy uberjar
   copy:
     src: data/lint.jar
