--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -5,6 +5,21 @@ lint_jar_path: /share/PI/malgeehe/code/lint.jar
 lint_dirs:
   data: /scratch/PI/malgeehe/data/lint
   sbatch: /share/PI/malgeehe/sbatch/lint
+  config: /share/PI/malgeehe/config/lint
+
+stacks_raw: /scratch/PI/malgeehe/data/stacks/raw
+
+
+# application.conf
+lint_config:
+
+  gale_dir: '{{ stacks_raw }}/gale'
+
+  chicago:
+    novel_csv: '{{ stacks_raw }}/chicago/NOVELS_METADATA.csv'
+    author_csv: '{{ stacks_raw }}/chicago/AUTHORS_METADATA.csv'
+    text_dir: '{{ stacks_raw }}/chicago/Texts'
+
 
 lint_sbatch:
 
