--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@
 remote_user = dclure
 host_key_checking = False
 inventory = ~/.hosts
+retry_files_enabled = False
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes -o UserKnownHostsFile=/dev/null
