Sbatch for TestConfig.

--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -29,3 +29,10 @@ lint_sbatch:
     tasks_per_node: 4
     cpus_per_task: 4
     mem: 4000
+
+  - class: TestConfig
+    time: 00:05:00
+    nodes: 1
+    tasks_per_node: 1
+    cpus_per_task: 4
+    mem: 4000
