--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -29,15 +29,13 @@ lint_config:
 lint_sbatch:
 
   - class: lint.jobs.Benchmark
-    time: 00:02:00
+    time: 00:10:00
     nodes: 2
-    tasks_per_node: 1
-    cpus_per_task: 16
+    cores: 16
     mem: 4000
 
   - class: lint.jobs.LoadGale
     time: 01:00:00
     nodes: 3
-    tasks_per_node: 4
-    cpus_per_task: 4
+    cores: 16
     mem: 64000
