Testing sbatch for LoadChicagoNovels.

--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -39,3 +39,10 @@ lint_sbatch:
     nodes: 3
     cores: 16
     mem: 64000
+
+  # test
+  - class: lint.jobs.LoadChicagoNovels
+    time: 00:10:00
+    nodes: 1
+    cores: 16
+    mem: 64000
