Break out an 'lint_application_conf' variable.

--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -7,6 +7,8 @@ lint_dirs:
   sbatch: /share/PI/malgeehe/sbatch/lint
   config: /share/PI/malgeehe/config/lint
 
+lint_application_conf: '{{ lint_dirs.config }}/application.conf'
+
 stacks_raw: /scratch/PI/malgeehe/data/stacks/raw
 
 # TODO: Share from spark role?
