Testing MergeCorpus sbatch.

--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -55,3 +55,10 @@ lint_sbatch:
     nodes: 2
     cores: 16
     mem: 64000
+
+  # test
+  - class: lint.jobs.MergeCorpus
+    time: 00:10:00
+    nodes: 1
+    cores: 16
+    mem: 64000
