Testing ExtBinCounts sbatch.

--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -67,3 +67,10 @@ lint_sbatch:
     nodes: 1
     cores: 16
     mem: 64000
+
+  # test
+  - class: lint.jobs.ExtBinCounds
+    time: 00:10:00
+    nodes: 1
+    cores: 16
+    mem: 64000
