Deploy a custom spark-defaults.conf file, which sets spark.local.dir.

--- a/roles/spark/defaults/main.yml
+++ b/roles/spark/defaults/main.yml
@@ -6,3 +6,5 @@ spark_dir: /share/PI/malgeehe/spark
 spark_home: '{{ spark_dir }}/spark'
 
 lint_jar_path: /share/PI/malgeehe/code/lint.jar
+
+spark_local_dir: /local-scratch/dclure/spark
