--- a/roles/lint/defaults/main.yml
+++ b/roles/lint/defaults/main.yml
@@ -33,8 +33,8 @@ lint_config:
 
     corpus:
       novelParquet: '{{ lint_dirs.data }}/novels.parquet'
-      binCountJSON: '{{ lint_dirs.data }}/bin-counts.json'
-      shuffledBinCountJSON: '{{ lint_dirs.data }}/shuffled-bin-counts.json'
+      ngram1BinCountJSON: '{{ lint_dirs.data }}/ngram1-bin-counts.json'
+      ngram2BinCountJSON: '{{ lint_dirs.data }}/ngram2-bin-counts.json'
 
 
 lint_sbatch:
@@ -69,14 +69,14 @@ lint_sbatch:
     cores: 16
     mem: 64000
 
-  - class: lint.jobs.ExtBinCounts
+  - class: lint.jobs.ExtNgram1BinCounts
     time: 00:20:00
     nodes: 3
     cores: 16
     mem: 64000
 
-  - class: lint.jobs.ExtShuffledBinCounts
-    time: 01:00:00
+  - class: lint.jobs.ExtNgram2BinCounts
+    time: 00:20:00
     nodes: 3
     cores: 16
     mem: 64000
